Add one more folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Cap01/Notebooks/.ipynb_checkpoints
 /Cap02/Notebooks/.ipynb_checkpoints
 /Cap03/Notebooks/.ipynb_checkpoints
+/Cap04/Notebooks/.ipynb_checkpoints
